# pi

./: .env  .gitignore  Dockerfile  README.md  connect.py  pyproject.toml  requirements.txt  test.py  wpa_supplicant.conf
model/: yolov10l.pt
src/: camera.py  demo_calibration.py  demo_detection.py  demo_mark_tables.py  detection.py  lib_find_network_cam.py  lib_network.py  lib_transform.py  main.py  run.py  run_calibration.py  run_detection.py  run_mark_tables.py  run_view.py  scan_ip_port.py  test.py  test_calibration_still.py  test_detection_still.py  test_mark_tables_still.py  test_open_camera.py
